--- a/.github/workflows/var-view.yml
+++ b/.github/workflows/var-view.yml
@@ -7,6 +7,8 @@ jobs:
   view:
     runs-on: ubuntu-latest
     steps:
+    - name: checkout source
+      uses: actions/checkout@v4
     - name: Variables(gh-cli)
       env:
         GH_TOKEN: ${{ github.token }}
