--- a/.github/workflows/var-view.yml
+++ b/.github/workflows/var-view.yml
@@ -7,8 +7,8 @@ jobs:
   view:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout source
-      uses: actions/checkout@v4
+    # - name: checkout source
+    #   uses: actions/checkout@v4
     - name: Variables(refer value)
       run: |
         # 特定の変数の値を参照する
